# entservices-usersettings

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/agents/: doc-guardian.agent.md  l1-test-agent.agent.md  l1-test-guardian.agent.md  l2-test-guardian.agent.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md  Pluginlifecycle.instructions.md
.github/workflows/: L1-tests.yml  L2-tests-oop.yml  L2-tests.yml  component-release.yml  doc-guardian.yml  l1-test-guardian.yml  l2-test-guardian.yml  native_full_build.yml  tests-trigger.yml  valgrind-l2.yml
Analytics/: CHANGELOG.md  CMakeLists.txt
Analytics/Implementation/: AnalyticsImplementation.cpp  AnalyticsImplementation.h
Analytics/Implementation/Interfaces/: IAnalyticsBackend.h
AppGateway/: AppGateway.conf.in  AppGateway.config  AppGateway.cpp  AppGateway.h  AppGatewayImplementation.cpp  AppGatewayImplementation.h  AppGatewayResponderImplementation.cpp  AppGatewayResponderImplementation.h  CMakeLists.txt  Module.h  Resolver.cpp  Resolver.h
AppGateway/resolutions/: resolution.base.json
AppGateway/tests/: CurlCmds.md
AppManager/: AppManagerImplementation.cpp  AppManagerImplementation.h  AppManagerTelemetryReporting.cpp  AppManagerTelemetryReporting.h  CMakeLists.txt  LifecycleInterfaceConnector.cpp  LifecycleInterfaceConnector.h
AppNotifications/: AppNotifications.conf.in  AppNotifications.config  AppNotifications.cpp  AppNotifications.h  AppNotificationsImplementation.cpp  AppNotificationsImplementation.h  CMakeLists.txt  Module.h
AppNotifications/tests/: CurlCmds.md
CloudStore/grpc/: Store2.h
DownloadManager/: CMakeLists.txt  DownloadManager.conf.in  DownloadManager.config  DownloadManager.cpp  DownloadManager.h  DownloadManagerHttpClient.cpp  DownloadManagerHttpClient.h  DownloadManagerImplementation.cpp  DownloadManagerImplementation.h  Module.h
FbSettings/: CMakeLists.txt  FbSettings.conf.in  FbSettings.config  FbSettings.cpp  FbSettings.h  Module.h
FbSettings/delegate/: NetworkDelegate.h  SettingsDelegate.h  SystemDelegate.h  UserSettingsDelegate.h
FbSettings/tests/: CurlCmds.md
LifecycleManager/: ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt  LifecycleManagerImplementation.cpp  LifecycleManagerImplementation.h  LifecycleManagerTelemetryReporting.cpp  LifecycleManagerTelemetryReporting.h  RequestHandler.cpp  RequestHandler.h  State.cpp  StateHandler.cpp  StateHandler.h  StateTransitionHandler.cpp  StateTransitionRequest.h  WindowManagerHandler.cpp
MessageControl/: MessageControl.h  MessageControlImplementation.cpp
Migration/: CMakeLists.txt  Migration.conf.in  Migration.config  Migration.cpp  Migration.h  MigrationImplementation.cpp  MigrationImplementation.h  Module.h  README.md
Monitor/: Monitor.config
OCIContainer/: CMakeLists.txt  DobbyInterface.cpp  OCIContainerImplementation.cpp
PackageManager/: CMakeLists.txt  HttpClient.cpp  PackageManager.conf.in  PackageManager.cpp  PackageManager.h  PackageManagerImplementation.cpp  PackageManagerImplementation.h
PackageManager/cmake/: FindJsonCpp.cmake
PersistentStore/: CMakeLists.txt
PersistentStore/sqlite/l1test/: Store2Test.cpp
PreinstallManager/: CMakeLists.txt  Module.h  PreinstallManager.conf.in  PreinstallManager.config  PreinstallManager.cpp  PreinstallManager.h  PreinstallManagerImplementation.cpp  PreinstallManagerImplementation.h  PreinstallManagerPlugin.json
RDKShell/: RDKShell.cpp  RDKShell.h
ResourceManager/: CMakeLists.txt
RuntimeManager/: AIConfiguration.cpp  AIConfiguration.h  CMakeLists.txt  DobbySpecGenerator.cpp  DobbySpecGenerator.h  RialtoConnector.cpp  RialtoConnector.h  RuntimeManager.conf.in  RuntimeManagerImplementation.cpp  RuntimeManagerImplementation.h
SceneSet/: CMakeLists.txt  Module.h  SceneSet.conf.in  SceneSet.config  SceneSet.cpp  SceneSet.h
StorageManager/: CMakeLists.txt  RequestHandler.cpp  StorageManager.cpp  StorageManagerImplementation.cpp  StorageManagerImplementation.h
Telemetry/: Telemetry.cpp  TelemetryImplementation.cpp  TelemetryImplementation.h
TelemetryMetrics/: CMakeLists.txt  Module.h  TelemetryFilters.h  TelemetryMetrics.conf.in  TelemetryMetrics.config  TelemetryMetrics.cpp  TelemetryMetrics.h  TelemetryMetricsImplementation.cpp  TelemetryMetricsImplementation.h
Tests/: README.md
Tests/CopilotFiles/: copilot-instructions-mock.md  l1_tests.instructions.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_AppManager.cpp  test_DownloadManager.cpp  test_LifecycleManager.cpp  test_MessageControl.cpp  test_Migration.cpp  test_PackageManager.cpp  test_PreinstallManager.cpp  test_RunTimeManager.cpp  test_StorageManager.cpp  test_USBDevice.cpp  test_USBMassStorage.cpp  test_UserSettings.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: Analytics_L2Test.cpp  AppManager_L2Test.cpp  Migration_L2Test.cpp  OCIContainer_L2Test.cpp  ResourceManager_L2Test.cpp  StorageManager_L2Test.cpp  Telemetry_L2Test.cpp  UserSettings_L2Test.cpp
USBDevice/: USBDevice.cpp  USBDeviceImplementation.cpp
USBMassStorage/: USBMassStorage.cpp  USBMassStorage.h  USBMassStorageImplementation.cpp
cmake/: FindIARMBus.cmake  FindWPEFrameworkHelpers.cmake
helpers/: BaseEventDelegate.h  ContextUtils.h  ObjectUtils.h  PluginInterfaceBuilder.h  StreamJSONOneShot.h  StringUtils.h  UtilsCallsign.h  UtilsConnections.h  UtilsFirebolt.h  UtilsJsonrpcDirectLink.h  UtilsUUID.h  WebSocketLink.h  WsManager.h  frontpanel.cpp
plugin/: CMakeLists.txt  IUserSettings.h  UserSettings.cpp  UserSettings.h  UserSettingsImpl.cpp  UserSettingsImplementation.cpp  UserSettingsImplementation.h
